add_library(NiAnimation STATIC
    NiActorManager.cpp
    NiActorManager.h
    NiActorManager.inl
    NiAlphaController.cpp
    NiAlphaController.h
    NiAnimation.h
    NiAnimationConstants.cpp
    NiAnimationConstants.h
    NiAnimationConstants.inl
    NiAnimationKey.cpp
    NiAnimationKey.h
    NiAnimationKey.inl
    NiAnimationKeyMacros.h
    NiAnimationLibType.h
    NiAnimationMetrics.cpp
    NiAnimationMetrics.h
    NiAnimationPCH.h
    NiAnimationSDM.cpp
    NiAnimationSDM.h
    NiAnimState.h
    NiBezFloatKey.cpp
    NiBezFloatKey.h
    NiBezFloatKey.inl
    NiBezPosKey.cpp
    NiBezPosKey.h
    NiBezPosKey.inl
    NiBezRotKey.cpp
    NiBezRotKey.h
    NiBezRotKey.inl
    NiBlendBoolInterpolator.cpp
    NiBlendBoolInterpolator.h
    NiBlendColorInterpolator.cpp
    NiBlendColorInterpolator.h
    NiBlendFloatInterpolator.cpp
    NiBlendFloatInterpolator.h
    NiBlendInterpolator.cpp
    NiBlendInterpolator.h
    NiBlendInterpolator.inl
    NiBlendPoint3Interpolator.cpp
    NiBlendPoint3Interpolator.h
    NiBlendQuaternionInterpolator.cpp
    NiBlendQuaternionInterpolator.h
    NiBlendTransformInterpolator.cpp
    NiBlendTransformInterpolator.h
    NiBoneLODController.cpp
    NiBoneLODController.h
    NiBoneLODController.inl
    NiBoolData.cpp
    NiBoolData.h
    NiBoolData.inl
    NiBoolEvaluator.cpp
    NiBoolEvaluator.h
    NiBoolEvaluator.inl
    NiBoolInterpController.cpp
    NiBoolInterpController.h
    NiBoolInterpolator.cpp
    NiBoolInterpolator.h
    NiBoolInterpolator.inl
    NiBoolKey.cpp
    NiBoolKey.h
    NiBoolKey.inl
    NiBoolTimelineEvaluator.cpp
    NiBoolTimelineEvaluator.h
    NiBoolTimelineInterpolator.cpp
    NiBoolTimelineInterpolator.h
    NiBSplineBasis.h
    NiBSplineBasis.inl
    NiBSplineBasisData.cpp
    NiBSplineBasisData.h
    NiBSplineColorEvaluator.cpp
    NiBSplineColorEvaluator.h
    NiBSplineColorInterpolator.cpp
    NiBSplineColorInterpolator.h
    NiBSplineCompColorEvaluator.cpp
    NiBSplineCompColorEvaluator.h
    NiBSplineCompColorInterpolator.cpp
    NiBSplineCompColorInterpolator.h
    NiBSplineCompFloatEvaluator.cpp
    NiBSplineCompFloatEvaluator.h
    NiBSplineCompFloatInterpolator.cpp
    NiBSplineCompFloatInterpolator.h
    NiBSplineCompPoint3Evaluator.cpp
    NiBSplineCompPoint3Evaluator.h
    NiBSplineCompPoint3Interpolator.cpp
    NiBSplineCompPoint3Interpolator.h
    NiBSplineCompTransformEvaluator.cpp
    NiBSplineCompTransformEvaluator.h
    NiBSplineCompTransformInterpolator.cpp
    NiBSplineCompTransformInterpolator.h
    NiBSplineData.cpp
    NiBSplineData.h
    NiBSplineEvaluator.cpp
    NiBSplineEvaluator.h
    NiBSplineFit.h
    NiBSplineFit.inl
    NiBSplineFloatEvaluator.cpp
    NiBSplineFloatEvaluator.h
    NiBSplineFloatInterpolator.cpp
    NiBSplineFloatInterpolator.h
    NiBSplineInterpolator.cpp
    NiBSplineInterpolator.h
    NiBSplinePoint3Evaluator.cpp
    NiBSplinePoint3Evaluator.h
    NiBSplinePoint3Interpolator.cpp
    NiBSplinePoint3Interpolator.h
    NiBSplineTransformEvaluator.cpp
    NiBSplineTransformEvaluator.h
    NiBSplineTransformInterpolator.cpp
    NiBSplineTransformInterpolator.h
    NiColorData.cpp
    NiColorData.h
    NiColorData.inl
    NiColorEvaluator.cpp
    NiColorEvaluator.h
    NiColorEvaluator.inl
    NiColorExtraDataController.cpp
    NiColorExtraDataController.h
    NiColorInterpController.cpp
    NiColorInterpController.h
    NiColorInterpolator.cpp
    NiColorInterpolator.h
    NiColorInterpolator.inl
    NiColorKey.cpp
    NiColorKey.h
    NiColorKey.inl
    NiConstBoolEvaluator.cpp
    NiConstBoolEvaluator.h
    NiConstBoolEvaluator.inl
    NiConstColorEvaluator.cpp
    NiConstColorEvaluator.h
    NiConstColorEvaluator.inl
    NiConstFloatEvaluator.cpp
    NiConstFloatEvaluator.h
    NiConstFloatEvaluator.inl
    NiConstPoint3Evaluator.cpp
    NiConstPoint3Evaluator.h
    NiConstPoint3Evaluator.inl
    NiConstQuaternionEvaluator.cpp
    NiConstQuaternionEvaluator.h
    NiConstQuaternionEvaluator.inl
    NiConstTransformEvaluator.cpp
    NiConstTransformEvaluator.h
    NiConstTransformEvaluator.inl
    NiControllerManager.cpp
    NiControllerManager.h
    NiControllerManager.inl
    NiControllerSequence.cpp
    NiControllerSequence.h
    NiControllerSequence.inl
    NiEulerRotKey.cpp
    NiEulerRotKey.h
    NiEulerRotKey.inl
    NiEvaluator.cpp
    NiEvaluator.h
    NiEvaluator.inl
    NiEvaluatorSPData.cpp
    NiEvaluatorSPData.h
    NiEvaluatorSPData.inl
    NiExtraDataController.cpp
    NiExtraDataController.h
    NiExtraDataController.inl
    NiFlipController.cpp
    NiFlipController.h
    NiFlipController.inl
    NiFloatData.cpp
    NiFloatData.h
    NiFloatData.inl
    NiFloatEvaluator.cpp
    NiFloatEvaluator.h
    NiFloatEvaluator.inl
    NiFloatExtraDataController.cpp
    NiFloatExtraDataController.h
    NiFloatInterpController.cpp
    NiFloatInterpController.h
    NiFloatInterpolator.cpp
    NiFloatInterpolator.h
    NiFloatInterpolator.inl
    NiFloatKey.cpp
    NiFloatKey.h
    NiFloatKey.inl
    NiFloatsExtraDataController.cpp
    NiFloatsExtraDataController.h
    NiFloatsExtraDataController.inl
    NiFloatsExtraDataPoint3Controller.cpp
    NiFloatsExtraDataPoint3Controller.h
    NiFloatsExtraDataPoint3Controller.inl
    NiGeomMorpherController.cpp
    NiGeomMorpherController.h
    NiGeomMorpherController.inl
    NiGeomMorpherConverter.cpp
    NiGeomMorpherConverter.h
    NiInterpController.cpp
    NiInterpController.h
    NiInterpController.inl
    NiInterpolator.cpp
    NiInterpolator.h
    NiInterpolator.inl
    NiInterpolatorConverter.cpp
    NiInterpolatorConverter.h
    NiInterpScalar.cpp
    NiInterpScalar.h
    NiKeyBasedEvaluator.cpp
    NiKeyBasedEvaluator.h
    NiKeyBasedInterpolator.cpp
    NiKeyBasedInterpolator.h
    NiKFMTool.cpp
    NiKFMTool.h
    NiKFMTool.inl
    NiLightColorController.cpp
    NiLightColorController.h
    NiLightColorController.inl
    NiLightDimmerController.cpp
    NiLightDimmerController.h
    NiLinColorKey.cpp
    NiLinColorKey.h
    NiLinColorKey.inl
    NiLinFloatKey.cpp
    NiLinFloatKey.h
    NiLinFloatKey.inl
    NiLinPosKey.cpp
    NiLinPosKey.h
    NiLinPosKey.inl
    NiLinRotKey.cpp
    NiLinRotKey.h
    NiLinRotKey.inl
    NiLookAtEvaluator.cpp
    NiLookAtEvaluator.h
    NiLookAtEvaluator.inl
    NiLookAtInterpolator.cpp
    NiLookAtInterpolator.h
    NiLookAtInterpolator.inl
    NiMaterialColorController.cpp
    NiMaterialColorController.h
    NiMaterialColorController.inl
    NiMorphData.cpp
    NiMorphData.h
    NiMorphData.inl
    NiMorphWeightsController.cpp
    NiMorphWeightsController.h
    NiMorphWeightsController.inl
    NiMultiTargetPoseHandler.cpp
    NiMultiTargetPoseHandler.h
    NiMultiTargetPoseHandler.inl
    NiMultiTargetTransformController.cpp
    NiMultiTargetTransformController.h
    NiMultiTargetTransformController.inl
    NiOldAnimationConverter.cpp
    NiOldAnimationConverter.h
    NiPathEvaluator.cpp
    NiPathEvaluator.h
    NiPathEvaluator.inl
    NiPathInterpolator.cpp
    NiPathInterpolator.h
    NiPathInterpolator.inl
    NiPoint3Evaluator.cpp
    NiPoint3Evaluator.h
    NiPoint3Evaluator.inl
    NiPoint3InterpController.cpp
    NiPoint3InterpController.h
    NiPoint3Interpolator.cpp
    NiPoint3Interpolator.h
    NiPoint3Interpolator.inl
    NiPosData.cpp
    NiPosData.h
    NiPosData.inl
    NiPoseBinding.cpp
    NiPoseBinding.h
    NiPoseBinding.inl
    NiPoseBlender.cpp
    NiPoseBlender.h
    NiPoseBlender.inl
    NiPoseBuffer.cpp
    NiPoseBuffer.h
    NiPoseBuffer.inl
    NiPoseBufferChannelType.h
    NiPoseBufferHandle.h
    NiPoseBufferHandle.inl
    NiPosKey.cpp
    NiPosKey.h
    NiPosKey.inl
    NiPrimeNumber.cpp
    NiPrimeNumber.h
    NiQuaternionEvaluator.cpp
    NiQuaternionEvaluator.h
    NiQuaternionEvaluator.inl
    NiQuaternionInterpController.cpp
    NiQuaternionInterpController.h
    NiQuaternionInterpolator.cpp
    NiQuaternionInterpolator.h
    NiQuaternionInterpolator.inl
    NiQuatTransform.cpp
    NiQuatTransform.h
    NiQuatTransform.inl
    NiRotData.cpp
    NiRotData.h
    NiRotData.inl
    NiRotKey.cpp
    NiRotKey.h
    NiRotKey.inl
    NiScratchPad.cpp
    NiScratchPad.h
    NiScratchPad.inl
    NiScratchPadBlock.h
    NiSequenceData.cpp
    NiSequenceData.h
    NiSequenceData.inl
    NiSingleInterpController.cpp
    NiSingleInterpController.h
    NiSkinningLODController.cpp
    NiSkinningLODController.h
    NiSkinningLODController.inl
    NiSpline.h
    NiStepBoolKey.cpp
    NiStepBoolKey.h
    NiStepBoolKey.inl
    NiStepColorKey.cpp
    NiStepColorKey.h
    NiStepColorKey.inl
    NiStepFloatKey.cpp
    NiStepFloatKey.h
    NiStepFloatKey.inl
    NiStepPosKey.cpp
    NiStepPosKey.h
    NiStepPosKey.inl
    NiStepRotKey.cpp
    NiStepRotKey.h
    NiStepRotKey.inl
    NiStringPalette.cpp
    NiStringPalette.h
    NiStringPalette.inl
    NiTCBFloatKey.cpp
    NiTCBFloatKey.h
    NiTCBFloatKey.inl
    NiTCBPosKey.cpp
    NiTCBPosKey.h
    NiTCBPosKey.inl
    NiTCBRotKey.cpp
    NiTCBRotKey.h
    NiTCBRotKey.inl
    NiTextKey.cpp
    NiTextKey.h
    NiTextKey.inl
    NiTextKeyExtraData.cpp
    NiTextKeyExtraData.h
    NiTextKeyExtraData.inl
    NiTextKeyMatch.cpp
    NiTextKeyMatch.h
    NiTextKeyMatch.inl
    NiTextureTransformController.cpp
    NiTextureTransformController.h
    NiTextureTransformController.inl
    NiTransformController.cpp
    NiTransformController.h
    NiTransformData.cpp
    NiTransformData.h
    NiTransformData.inl
    NiTransformEvaluator.cpp
    NiTransformEvaluator.h
    NiTransformEvaluator.inl
    NiTransformInterpolator.cpp
    NiTransformInterpolator.h
    NiTransformInterpolator.inl
    NiVisController.cpp
    NiVisController.h
)

target_link_libraries(NiAnimation PUBLIC NiMesh)
target_include_directories(NiAnimation PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_precompile_headers(NiAnimation PRIVATE NiAnimationPCH.h)
set_target_properties(NiAnimation PROPERTIES FOLDER "${GB3_PREFIX}CoreRuntime/EngineLibs")
