add_library(NiCollision STATIC 
    NiBoundingVolume.cpp
    NiBoundingVolume.h
    NiBoundingVolume.inl
    NiBox.cpp
    NiBox.h
    NiBoxBV.cpp
    NiBoxBV.h
    NiBoxBV.inl
    NiBoxBVMacros.h
    NiBoxCapsuleIntersector.cpp
    NiBoxCapsuleIntersector.h
    NiBoxSphereIntersector.cpp
    NiBoxSphereIntersector.h
    NiCapsule.cpp
    NiCapsule.h
    NiCapsuleBV.cpp
    NiCapsuleBV.h
    NiCapsuleBV.inl
    NiCapsuleCapsuleIntersector.cpp
    NiCapsuleCapsuleIntersector.h
    NiCapsuleSphereIntersector.cpp
    NiCapsuleSphereIntersector.h
    NiCapsuleTriIntersector.cpp
    NiCapsuleTriIntersector.h
    NiCollision.cpp
    NiCollision.h
    NiCollisionData.cpp
    NiCollisionData.h
    NiCollisionData.inl
    NiCollisionGroup.cpp
    NiCollisionGroup.h
    NiCollisionLibType.h
    NiCollisionMetrics.cpp
    NiCollisionMetrics.h
    NiCollisionPCH.h
    NiCollisionSDM.cpp
    NiCollisionSDM.h
    NiCollisionTraversals.cpp
    NiCollisionTraversals.h
    NiCollisionUtils.cpp
    NiCollisionUtils.h
    NiCollisionUtils.inl
    NiDistPntBox.cpp
    NiDistPntPgm.cpp
    NiDistPntSeg.cpp
    NiDistPntTri.cpp
    NiDistSegBox.cpp
    NiDistSegBox.h
    NiDistSegPgm.cpp
    NiDistSegSeg.cpp
    NiDistSegTri.cpp
    NiDistTriPgm.cpp
    NiDistTriTri.cpp
    NiDrawableBV.cpp
    NiDrawableBV.h
    NiHalfSpaceBV.cpp
    NiHalfSpaceBV.h
    NiHalfSpaceBV.inl
    NiIntersector.cpp
    NiIntersector.h
    NiIntersector.inl
    NiOBBLeaf.cpp
    NiOBBLeaf.h
    NiOBBLeaf.inl
    NiOBBNode.cpp
    NiOBBNode.h
    NiOBBNode.inl
    NiOBBox.cpp
    NiOBBox.h
    NiOBBox.inl
    NiOBBRoot.cpp
    NiOBBRoot.h
    NiOBBRoot.inl
    NiParallelogram.cpp
    NiParallelogram.h
    NiPick.cpp
    NiPick.h
    NiPick.inl
    NiSegment.cpp
    NiSegment.h
    NiSphere.cpp
    NiSphere.h
    NiSphereBV.cpp
    NiSphereBV.h
    NiSphereBV.inl
    NiSphereTriIntersector.cpp
    NiSphereTriIntersector.h
    NiSqrDistance.h
    NiSqrDistance.inl
    NiTrigon.cpp
    NiTrigon.h
    NiTriIntersect.cpp
    NiTriIntersect.h
    NiUnionBV.cpp
    NiUnionBV.h
    NiUnionBV.inl
)

target_link_libraries(NiCollision PUBLIC NiMesh)
target_include_directories(NiCollision PUBLIC ${CMAKE_CURRENT_LIST_DIR})
set_target_properties(NiCollision PROPERTIES FOLDER "${GB3_PREFIX}CoreRuntime/EngineLibs")
target_precompile_headers(NiCollision PRIVATE NiCollisionPCH.h)
