if (MSVC) # Fucking MSVC I hate this compiler...
    string(REPLACE "/EHsc" "/EHs-c-" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
endif()

set(NIMAIN_SRC
    Ni2DBuffer.cpp
    Ni2DBuffer.h
    Ni2DBuffer.inl
    Ni2DRenderView.cpp
    Ni2DRenderView.h
    Ni2DRenderView.inl
    Ni3DRenderView.cpp
    Ni3DRenderView.h
    Ni3DRenderView.inl
    NiAccumulator.cpp
    NiAccumulator.h
    NiAccumulatorProcessor.cpp
    NiAccumulatorProcessor.h
    NiAccumulatorProcessor.inl
    NiAdditionalGeometryData.cpp
    NiAdditionalGeometryData.h
    NiAdditionalGeometryData.inl
    NiAlphaAccumulator.cpp
    NiAlphaAccumulator.h
    NiAlphaAccumulator.inl
    NiAlphaProperty.cpp
    NiAlphaProperty.h
    NiAlphaProperty.inl
    NiAlphaSortProcessor.cpp
    NiAlphaSortProcessor.h
    NiAlphaSortProcessor.inl
    NiAmbientLight.cpp
    NiAmbientLight.h
    NiAmbientLight.inl
    NiAVObject.cpp
    NiAVObject.h
    NiAVObject.inl
    NiProcessor.h
    NiAVObjectPalette.cpp
    NiAVObjectPalette.h
    NiBackToFrontAccumulator.cpp
    NiBackToFrontAccumulator.h
    NiBackToFrontSortProcessor.cpp
    NiBackToFrontSortProcessor.h
    NiBackToFrontSortProcessor.inl
    NiBillboardNode.cpp
    NiBillboardNode.h
    NiBillboardNode.inl
    NiBinaryExtraData.cpp
    NiBinaryExtraData.h
    NiBinaryExtraData.inl
    NiBitfield.h
    NiBMPReader.cpp
    NiBMPReader.h
    NiBool.h
    NiBooleanExtraData.cpp
    NiBooleanExtraData.h
    NiBooleanExtraData.inl
    NiBound.cpp
    NiBound.h
    NiBound.inl
    NiBSPNode.cpp
    NiBSPNode.h
    NiBSPNode.inl
    NiCamera.cpp
    NiCamera.h
    NiCamera.inl
    NiClickRenderStep.cpp
    NiClickRenderStep.h
    NiClone.h
    NiCloningProcess.h
    NiCodeBlock.cpp
    NiCodeBlock.h
    NiCollisionObject.cpp
    NiCollisionObject.h
    NiColor.cpp
    NiColor.h
    NiColorExtraData.cpp
    NiColorExtraData.h
    NiColorExtraData.inl
    NiCommonSemantics.cpp
    NiCommonSemantics.h
    NiCommonSemantics.inl
    NiCompositeValidator.cpp
    NiCompositeValidator.h
    NiCompositeValidator.inl
    NiCompUtility.cpp
    NiCompUtility.h
    NiCulledObjectValidator.cpp
    NiCulledObjectValidator.h
    NiCulledObjectValidator.inl
    NiCullingProcess.cpp
    NiCullingProcess.h
    NiCullingProcess.inl
    NiDDSReader.cpp
    NiDDSReader.h
    NiDefaultAVObjectPalette.cpp
    NiDefaultAVObjectPalette.h
    NiDefaultAVObjectPalette.inl
    NiDefaultClickRenderStep.cpp
    NiDefaultClickRenderStep.h
    NiDefaultClickRenderStep.inl
    NiDefaultShadowClickGenerator.cpp
    NiDefaultShadowClickGenerator.h
    NiDefaultShadowVisitor.cpp
    NiDefaultShadowVisitor.h
    NiDepthStencilBuffer.cpp
    NiDepthStencilBuffer.h
    NiDevImageConverter.cpp
    NiDevImageConverter.h
    NiDevImageConverter.inl
    NiDirectionalLight.cpp
    NiDirectionalLight.h
    NiDirectionalLight.inl
    NiDirectionalShadowWriteMaterial.cpp
    NiDirectionalShadowWriteMaterial.h
    NiDitherProperty.cpp
    NiDitherProperty.h
    NiDitherProperty.inl
    NiDrawSceneUtility.cpp
    NiDrawSceneUtility.h
    NiDynamicEffect.cpp
    NiDynamicEffect.h
    NiDynamicEffect.inl
    NiDynamicEffectState.cpp
    NiDynamicEffectState.h
    NiDynamicEffectState.inl
    NiDynamicEffectStateManager.cpp
    NiDynamicEffectStateManager.h
    NiDynamicEffectStateManager.inl
    NiDynamicTexture.cpp
    NiDynamicTexture.h
    NiDynamicTexture.inl
    NiExtraData.cpp
    NiExtraData.h
    NiFixedString.h
    NiFixedString.inl
    NiFlags.h
    NiFloatExtraData.cpp
    NiFloatExtraData.h
    NiFloatExtraData.inl
    NiFloatsExtraData.cpp
    NiFloatsExtraData.h
    NiFloatsExtraData.inl
    NiFogProperty.cpp
    NiFogProperty.h
    NiFogProperty.inl
    NiFragment.cpp
    NiFragment.h
    NiFragment.inl
    NiFragmentMaterial.cpp
    NiFragmentMaterial.h
    NiFragmentShaderInstanceDescriptor.cpp
    NiFragmentShaderInstanceDescriptor.h
    NiFrustum.cpp
    NiFrustum.h
    NiFrustumPlanes.cpp
    NiFrustumPlanes.h
    NiFrustumPlanes.inl
    NiGeometricUtils.h
    NiGeometricUtils.inl
    NiGeometry.cpp
    NiGeometry.h
    NiGeometry.inl
    NiGeometryData.cpp
    NiGeometryData.h
    NiGeometryData.inl
    NiGlobalConstantEntry.cpp
    NiGlobalConstantEntry.h
    NiGlobalConstantEntry.inl
    NiGlobalStringTable.h
    NiGPUProgram.cpp
    NiGPUProgram.h
    NiGPUProgram.inl
    NiGPUProgramCache.cpp
    NiGPUProgramCache.h
    NiGPUProgramDescriptor.cpp
    NiGPUProgramDescriptor.h
    NiImageConverter.cpp
    NiImageConverter.h
    NiImageReader.h
    NiIntegerExtraData.cpp
    NiIntegerExtraData.h
    NiIntegerExtraData.inl
    NiIntegersExtraData.cpp
    NiIntegersExtraData.h
    NiIntegersExtraData.inl
    NiLicense.h
    NiLight.cpp
    NiLight.h
    NiLight.inl
    NiLines.cpp
    NiLines.h
    NiLines.inl
    NiLinesData.cpp
    NiLinesData.h
    NiLinesData.inl
    NiLODData.cpp
    NiLODData.h
    NiLODNode.cpp
    NiLODNode.h
    NiLODNode.inl
    NiLogicalANDCompositeValidator.cpp
    NiLogicalANDCompositeValidator.h
    NiMain.h
    NiMainLibType.h
    NiMainMetrics.cpp
    NiMainMetrics.h
    NiMainMetrics.inl
    NiMainPCH.h
    NiMainSDM.cpp
    NiMainSDM.h
    NiMaterial.cpp
    NiMaterial.h
    NiMaterial.inl
    NiMaterialConfigurator.cpp
    NiMaterialConfigurator.h
    NiMaterialDescriptor.cpp
    NiMaterialDescriptor.h
    NiMaterialFragmentNode.cpp
    NiMaterialFragmentNode.h
    NiMaterialInstance.cpp
    NiMaterialInstance.h
    NiMaterialInstance.inl
    NiMaterialLibrary.cpp
    NiMaterialLibrary.h
    NiMaterialNode.cpp
    NiMaterialNode.h
    NiMaterialNodeLibrary.cpp
    NiMaterialNodeLibrary.h
    NiMaterialNodeLibraryReader.h
    NiMaterialProperty.cpp
    NiMaterialProperty.h
    NiMaterialProperty.inl
    NiMaterialResource.cpp
    NiMaterialResource.h
    NiMaterialResourceBinding.cpp
    NiMaterialResourceBinding.h
    NiMaterialResourceConsumerNode.cpp
    NiMaterialResourceConsumerNode.h
    NiMaterialResourceProducerNode.cpp
    NiMaterialResourceProducerNode.h
    NiMaterialSwapProcessor.cpp
    NiMaterialSwapProcessor.h
    NiMaterialSwapProcessor.inl
    NiMath.h
    NiMatrix3.h
    NiMatrix3.inl
    NiMetricsLayer.cpp
    NiMetricsLayer.h
    NiMetricsLayer.inl
    NiMetricsOutputModule.h
    NiMetricsScopeTimer.h
    NiMetricsScopeTimer.inl
    NiMetricsTimer.h
    NiMetricsTimer.inl
    NiNIFImageReader.cpp
    NiNIFImageReader.h
    NiNode.cpp
    NiNode.h
    NiNode.inl
    NiNoiseTexture.cpp
    NiNoiseTexture.h
    NiNoiseTexture.inl
    NiObject.cpp
    NiObject.h
    NiObjectGroup.cpp
    NiObjectGroup.h
    NiObjectGroup.inl
    NiObjectNET.cpp
    NiObjectNET.h
    NiObjectNET.inl
    NiOldScreenSpace.cpp
    NiOldScreenSpace.h
    NiOutputStreamDescriptor.cpp
    NiOutputStreamDescriptor.h
    NiOutputStreamDescriptor.inl
    NiPalette.cpp
    NiPalette.h
    NiPalette.inl
    NiParallelUpdateTaskManager.cpp
    NiParallelUpdateTaskManager.h
    NiParallelUpdateTaskManager.inl
    NiParticles.cpp
    NiParticles.h
    NiParticles.inl
    NiParticlesData.cpp
    NiParticlesData.h
    NiParticlesData.inl
    NiPersistentSrcTextureRendererData.cpp
    NiPersistentSrcTextureRendererData.h
    NiPersistentSrcTextureRendererData.inl
    NiPixelData.cpp
    NiPixelData.h
    NiPixelData.inl
    NiPixelFormat.cpp
    NiPixelFormat.h
    NiPixelFormat.inl
    NiPlane.cpp
    NiPlane.h
    NiPlane.inl
    NiPoint2.cpp
    NiPoint2.h
    NiPoint2.inl
    NiPoint3.cpp
    NiPoint3.h
    NiPoint3.inl
    NiPoint4.h
    NiPointLight.cpp
    NiPointLight.h
    NiPointLight.inl
    NiPointShadowWriteMaterial.cpp
    NiPointShadowWriteMaterial.h
    NiPrimitiveType.cpp
    NiPrimitiveType.h
    NiProperty.cpp
    NiProperty.h
    NiProperty.inl
    NiPropertyState.cpp
    NiPropertyState.h
    NiPropertyState.inl
    NiPSSMConfiguration.cpp
    NiPSSMConfiguration.h
    NiPSSMConfiguration.inl
    NiPSSMShadowClickGenerator.cpp
    NiPSSMShadowClickGenerator.h
    NiPSSMShadowClickGenerator.inl
    NiQuaternion.cpp
    NiQuaternion.h
    NiQuaternion.inl
    NiRandomLCG.h
    NiRandomLCG.inl
    NiRangeLODData.cpp
    NiRangeLODData.h
    NiRangeLODData.inl
    NiRect.h
    NiRect.inl
    NiRefObject.cpp
    NiRefObject.h
    NiRefObject.inl
    NiRenderCallContext.h
    NiRenderClick.cpp
    NiRenderClick.h
    NiRenderClick.inl
    NiRenderClickValidator.cpp
    NiRenderClickValidator.h
    NiRenderedCubeMap.cpp
    NiRenderedCubeMap.h
    NiRenderedCubeMap.inl
    NiRenderedTexture.cpp
    NiRenderedTexture.h
    NiRenderedTexture.inl
    NiRenderer.cpp
    NiRenderer.h
    NiRenderer.inl
    NiRendererSpecificProperty.cpp
    NiRendererSpecificProperty.h
    NiRendererSpecificProperty.inl
    NiRenderFrame.cpp
    NiRenderFrame.h
    NiRenderFrame.inl
    NiRenderListProcessor.cpp
    NiRenderListProcessor.h
    NiRenderObject.cpp
    NiRenderObject.h
    NiRenderObject.inl
    NiRenderObjectMaterialOption.cpp
    NiRenderObjectMaterialOption.h
    NiRenderObjectMaterialOption.inl
    NiRenderStep.cpp
    NiRenderStep.h
    NiRenderStep.inl
    NiRenderTargetGroup.cpp
    NiRenderTargetGroup.h
    NiRenderView.cpp
    NiRenderView.h
    NiRenderView.inl
    NiRTTI.cpp
    NiRTTI.h
    NiSCMExtraData.cpp
    NiSCMExtraData.h
    NiSCMExtraData.inl
    NiScreenElements.cpp
    NiScreenElements.h
    NiScreenElements.inl
    NiScreenElementsData.cpp
    NiScreenElementsData.h
    NiScreenElementsData.inl
    NiScreenFillingRenderView.cpp
    NiScreenFillingRenderView.h
    NiScreenFillingRenderView.inl
    NiScreenLODData.cpp
    NiScreenLODData.h
    NiScreenLODData.inl
    NiScreenTexture.cpp
    NiScreenTexture.h
    NiSemanticAdapterTable.cpp
    NiSemanticAdapterTable.h
    NiSemanticAdapterTable.inl
    NiSemanticAdapterTableParser.cpp
    NiSemanticAdapterTableParser.h
    NiSGIReader.cpp
    NiSGIReader.h
    NiShadeProperty.cpp
    NiShadeProperty.h
    NiShadeProperty.inl
    NiShader.cpp
    NiShader.h
    NiShader.inl
    NiShaderAttributeDesc.cpp
    NiShaderAttributeDesc.h
    NiShaderConstantMap.cpp
    NiShaderConstantMap.h
    NiShaderConstantMap.inl
    NiShaderConstantMapEntry.cpp
    NiShaderConstantMapEntry.h
    NiShaderConstantMapEntry.inl
    NiShaderDeclaration.cpp
    NiShaderDeclaration.h
    NiShaderDeclaration.inl
    NiShaderDesc.cpp
    NiShaderDesc.h
    NiShaderDescBase.cpp
    NiShaderDescBase.h
    NiShaderError.cpp
    NiShaderError.h
    NiShaderFactory.cpp
    NiShaderFactory.h
    NiShaderLibrary.cpp
    NiShaderLibrary.h
    NiShaderLibraryDesc.cpp
    NiShaderLibraryDesc.h
    NiShaderLibraryInterface.h
    NiShaderParser.cpp
    NiShaderParser.h
    NiShaderRequirementDesc.cpp
    NiShaderRequirementDesc.h
    NiShaderSortProcessor.cpp
    NiShaderSortProcessor.h
    NiShaderSortProcessor.inl
    NiShaderTimeController.cpp
    NiShaderTimeController.h
    NiShadowClickGenerator.cpp
    NiShadowClickGenerator.h
    NiShadowClickGenerator.inl
    NiShadowClickValidator.cpp
    NiShadowClickValidator.h
    NiShadowClickValidator.inl
    NiShadowCubeMap.cpp
    NiShadowCubeMap.h
    NiShadowCubeMap.inl
    NiShadowGenerator.cpp
    NiShadowGenerator.h
    NiShadowGenerator.inl
    NiShadowManager.cpp
    NiShadowManager.h
    NiShadowManager.inl
    NiShadowMap.cpp
    NiShadowMap.h
    NiShadowMap.inl
    NiShadowMaterialSwapProcessor.cpp
    NiShadowMaterialSwapProcessor.h
    NiShadowMaterialSwapProcessor.inl
    NiShadowRenderClick.cpp
    NiShadowRenderClick.h
    NiShadowRenderClick.inl
    NiShadowSortProcessor.cpp
    NiShadowSortProcessor.h
    NiShadowSortProcessor.inl
    NiShadowTechnique.cpp
    NiShadowTechnique.h
    NiShadowTechnique.inl
    NiShadowVisitor.cpp
    NiShadowVisitor.h
    NiSingleShaderMaterial.cpp
    NiSingleShaderMaterial.h
    NiSingleShaderMaterialLibrary.cpp
    NiSingleShaderMaterialLibrary.h
    NiSkinData.cpp
    NiSkinData.h
    NiSkinData.inl
    NiSkinInstance.cpp
    NiSkinInstance.h
    NiSkinPartition.cpp
    NiSkinPartition.h
    NiSkinPartition.inl
    NiSmartPointer.h
    NiSortAdjustNode.cpp
    NiSortAdjustNode.h
    NiSortAdjustNode.inl
    NiSourceCubeMap.cpp
    NiSourceCubeMap.h
    NiSourceCubeMap.inl
    NiSourceTexture.cpp
    NiSourceTexture.h
    NiSourceTexture.inl
    NiSpecularProperty.cpp
    NiSpecularProperty.h
    NiSpecularProperty.inl
    NiSpotLight.cpp
    NiSpotLight.h
    NiSpotLight.inl
    NiSpotShadowWriteMaterial.cpp
    NiSpotShadowWriteMaterial.h
    NiStandardMaterial.cpp
    NiStandardMaterial.h
    NiStandardMaterialDescriptor.cpp
    NiStandardMaterialDescriptor.h
    NiStandardPixelProgramDescriptor.cpp
    NiStandardPixelProgramDescriptor.h
    NiStandardVertexProgramDescriptor.cpp
    NiStandardVertexProgramDescriptor.h
    NiStencilProperty.cpp
    NiStencilProperty.h
    NiStencilProperty.inl
    NiStopWatch.h
    NiStopWatch.inl
    NiStream.cpp
    NiStream.h
    NiStream.inl
    NiStreamMacros.h
    NiStreamOutSettings.cpp
    NiStreamOutSettings.h
    NiStreamOutSettings.inl
    NiString.cpp
    NiString.h
    NiStringExtraData.cpp
    NiStringExtraData.h
    NiStringExtraData.inl
    NiStringsExtraData.cpp
    NiStringsExtraData.h
    NiStringsExtraData.inl
    NiSwitchNode.cpp
    NiSwitchNode.h
    NiSwitchNode.inl
    NiSwitchStringExtraData.cpp
    NiSwitchStringExtraData.h
    NiSwitchStringExtraData.inl
    NiSyncArgs.cpp
    NiSyncArgs.h
    NiSyncArgs.inl
    NiTAbstractPoolAllocator.h
    NiTAbstractPoolAllocator.inl
    NiTAbstractPoolAllocatorFuncStorage.cpp
    NiTAbstractPoolAllocatorFuncStorage.h
    NiTArray.h
    NiTArray.inl
    NiTask.cpp
    NiTask.h
    NiTask.inl
    NiTaskManager.cpp
    NiTaskManager.h
    NiTaskManager.inl
    NiTCollection.h
    NiTDefaultAllocator.h
    NiTexture.cpp
    NiTexture.h
    NiTexture.inl
    NiTextureCodec.cpp
    NiTextureCodec.h
    NiTextureEffect.cpp
    NiTextureEffect.h
    NiTextureEffect.inl
    NiTexturePalette.h
    NiTexturePalette.inl
    NiTextureStage.cpp
    NiTextureStage.h
    NiTextureStage.inl
    NiTextureTransform.cpp
    NiTextureTransform.h
    NiTextureTransform.inl
    NiTexturingProperty.cpp
    NiTexturingProperty.h
    NiTexturingProperty.inl
    NiTFixedStringMap.h
    NiTFixedStringMap.inl
    NiTGAReader.cpp
    NiTGAReader.h
    NiTimeController.cpp
    NiTimeController.h
    NiTimeController.inl
    NiTimeSyncController.cpp
    NiTimeSyncController.h
    NiTimeSyncController.inl
    NiTLargeArray.h
    NiTLargeArray.inl
    NiTList.h
    NiTListBase.h
    NiTListBase.inl
    NiTMap.h
    NiTMap.inl
    NiTMapBase.h
    NiTMapBase.inl
    NiTNodeTraversal.h
    NiTNodeTraversal.inl
    NiTObjectAllocator.h
    NiTObjectAllocator.inl
    NiTObjectList.h
    NiTObjectList.inl
    NiTPointerAllocator.cpp
    NiTPointerAllocator.h
    NiTPointerAllocator.inl
    NiTPointerList.h
    NiTPointerListBase.h
    NiTPointerListBase.inl
    NiTPointerMap.h
    NiTPointerMap.inl
    NiTPool.h
    NiTPool.inl
    NiTPtrSet.h
    NiTQueue.h
    NiTQueue.inl
    NiTransform.cpp
    NiTransform.h
    NiTriBasedGeom.cpp
    NiTriBasedGeom.h
    NiTriBasedGeom.inl
    NiTriBasedGeomData.cpp
    NiTriBasedGeomData.h
    NiTriBasedGeomData.inl
    NiTriShape.cpp
    NiTriShape.h
    NiTriShape.inl
    NiTriShapeData.cpp
    NiTriShapeData.h
    NiTriShapeData.inl
    NiTriShapeDynamicData.cpp
    NiTriShapeDynamicData.h
    NiTriShapeDynamicData.inl
    NiTriStrips.cpp
    NiTriStrips.h
    NiTriStripsData.cpp
    NiTriStripsData.h
    NiTriStripsData.inl
    NiTSet.h
    NiTSet.inl
    NiTStringMap.h
    NiTStringMap.inl
    NiUpdateProcess.cpp
    NiUpdateProcess.h
    NiUpdateProcess.inl
    NiVectorExtraData.cpp
    NiVectorExtraData.h
    NiVectorExtraData.inl
    NiVertexColorProperty.cpp
    NiVertexColorProperty.h
    NiVertexColorProperty.inl
    NiVertWeightsExtraData.cpp
    NiVertWeightsExtraData.h
    NiVertWeightsExtraData.inl
    NiViewerStrings.cpp
    NiViewerStrings.h
    NiViewRenderClick.cpp
    NiViewRenderClick.h
    NiViewRenderClick.inl
    NiVisibleArray.cpp
    NiVisibleArray.h
    NiVisibleArray.inl
    NiVSMBlurMaterial.cpp
    NiVSMBlurMaterial.h
    NiVSMBlurMaterialDescriptor.cpp
    NiVSMBlurMaterialDescriptor.h
    NiVSMBlurPixelProgramDescriptor.cpp
    NiVSMBlurPixelProgramDescriptor.h
    NiVSMBlurVertexProgramDescriptor.cpp
    NiVSMBlurVertexProgramDescriptor.h
    NiVSMShadowTechnique.cpp
    NiVSMShadowTechnique.h
    NiWireframeProperty.cpp
    NiWireframeProperty.h
    NiWireframeProperty.inl
    NiZBufferProperty.cpp
    NiZBufferProperty.h
    NiZBufferProperty.inl
    DirectionalShadowWriteMaterialNodeLibrary/NiDirectionalShadowWriteMaterialNodeLibrary.cpp
    PointShadowWriteMaterialNodeLibrary/NiPointShadowWriteMaterialNodeLibrary.cpp
    SpotShadowWriteMaterialNodeLibrary/NiSpotShadowWriteMaterialNodeLibrary.cpp
    StandardMaterialNodeLibrary/NiStandardMaterialNodeLibrary.cpp
    VSMBlurMaterialNodeLibrary/NiVSMBlurMaterialNodeLibrary.cpp
    DirectionalShadowWriteMaterialNodeLibrary/NiDirectionalShadowWriteMaterialNodeLibrary.h
    PointShadowWriteMaterialNodeLibrary/NiPointShadowWriteMaterialNodeLibrary.h
    SpotShadowWriteMaterialNodeLibrary/NiSpotShadowWriteMaterialNodeLibrary.h
    StandardMaterialNodeLibrary/NiStandardMaterialNodeLibrary.h
    VSMBlurMaterialNodeLibrary/NiVSMBlurMaterialNodeLibrary.h
)

set(SDL_FILES
    SDL2/NiAVObject_SDL2.cpp
    SDL2/NiBound_SDL2.cpp
    SDL2/NiMaterialLibraryInterface_SDL2.h
    SDL2/NiMaterialLibrary_SDL2.cpp
    SDL2/NiMatrix3_SDL2.cpp
    SDL2/NiMediaPaths_SDL2.cpp
    SDL2/NiMediaPaths_SDL2.h
    SDL2/NiPixelData_SDL2.cpp
    SDL2/NiProcessor_SDL2.cpp
    SDL2/NiProcessor_SDL2.h
    SDL2/NiTransform_SDL2.inl
)

source_group("SDL2" FILES ${SDL_FILES})

add_library(NiMain STATIC ${NIMAIN_SRC} ${SDL_FILES})
target_include_directories(NiMain PUBLIC
    ${CMAKE_CURRENT_LIST_DIR}
    ${CMAKE_CURRENT_LIST_DIR}/DirectionalShadowWriteMaterialNodeLibrary/
    ${CMAKE_CURRENT_LIST_DIR}/PointShadowWriteMaterialNodeLibrary/
    ${CMAKE_CURRENT_LIST_DIR}/SpotShadowWriteMaterialNodeLibrary/
    ${CMAKE_CURRENT_LIST_DIR}/StandardMaterialNodeLibrary/
    ${CMAKE_CURRENT_LIST_DIR}/VSMBlurMaterialNodeLibrary/
)
set_target_properties(NiMain PROPERTIES FOLDER "${GB3_PREFIX}CoreRuntime/EngineLibs")
target_link_libraries(NiMain PUBLIC NiSystem)
target_precompile_headers(NiMain PRIVATE NiMainPCH.h)

if (GB3_BUILD_TOOLS)
    add_library(NiMainDLL SHARED ${NIMAIN_SRC})
    target_include_directories(NiMainDLL PUBLIC
        ${CMAKE_CURRENT_LIST_DIR}
        ${CMAKE_CURRENT_LIST_DIR}/DirectionalShadowWriteMaterialNodeLibrary/
        ${CMAKE_CURRENT_LIST_DIR}/PointShadowWriteMaterialNodeLibrary/
        ${CMAKE_CURRENT_LIST_DIR}/SpotShadowWriteMaterialNodeLibrary/
        ${CMAKE_CURRENT_LIST_DIR}/StandardMaterialNodeLibrary/
        ${CMAKE_CURRENT_LIST_DIR}/VSMBlurMaterialNodeLibrary/
    )
    set_target_properties(NiMainDLL PROPERTIES FOLDER "${GB3_PREFIX}CoreRuntime/EngineLibs")
    target_link_libraries(NiMainDLL PUBLIC NiSystemDLL)
    target_precompile_headers(NiMainDLL PRIVATE NiMainPCH.h)
    target_compile_definitions(NiMainDLL PRIVATE -DNIMAIN_EXPORT -D_USRDLL INTERFACE -DNIMAIN_IMPORT)
endif()
